# assignments

./: .gitignore  LICENSE  README.md
c++/connected_components_labeling/: CMakeLists.txt  README.txt
c++/connected_components_labeling/output/: ObjectDetectionStats.txt
c++/connected_components_labeling/src/: ConnectedComponents.cpp  ConnectedComponents.hpp  UnionFind.cpp  UnionFind.hpp  ccl.cpp
c++/connected_components_labeling/test_images/: test.pgm
c++/digital_number_recognition/: CMakeLists.txt  REAME.txt
c++/digital_number_recognition/src/: sudoku_ocr.cpp
c++/edge_detection/: CMakeLists.txt  README
c++/edge_detection/src/: edge_detector.cpp
c++/histogram_matching/: CMakeLists.txt  README.txt
c++/histogram_matching/src/: hist_match.cpp  histogram.cpp
c/cs2050Solutions/hw1/: hw1.c  output.txt
c/cs2050Solutions/hw2/: hw2.c  hw2_template.c  names.txt  out.txt  people.txt  test.c
c/cs2050Solutions/hw3/: bst.c  bst.h  driver.c  flatten_logic_with_some_c_code.txt  hw3.c  hw3_balanced_output.txt  hw3_template.c  hw3_unbalanced_output.txt
c/cs2050Solutions/hw3/hw3/: Hw3.c  Makefile  bst.c  name2.txt  names.txt  (+1 more)
c/cs2050Solutions/hw4/: bak.sav  collector.c  commands.c  commands.h  items.c  utility.c
c/cs2050Solutions/lab1/: buggy.c  lab1.c  new_stats.txt  projections.txt  stats.txt
c/cs2050Solutions/lab2/: lab2.c  persons.txt
c/cs2050Solutions/lab3/: 2.c  3.c  destroy.c  example.c  lab3.c  prelab3.doc  vector.c
c/cs2050Solutions/lab4/: Lab4.docx  linked_list.c
c/cs2050Solutions/lab5/: lab5.c  lab5_bonus_sample_output.txt  lab5_sample_output.txt  prelab5.c  queue_linked_list.c  stats.txt
c/cs2050Solutions/lab6/: lab6.c  matrix_c.txt  result.txt
c/cs2050Solutions/lab7/: lab7.c  lab7_template.c
c/cs2050Solutions/lab8/: checker.c  commands.c  commands.h  makefile  utility.c
(+14 files in other folders)
