project( histogram )
cmake_minimum_required(VERSION 2.8)
add_definitions(-DHAVE_ALLOCA -DHAVE_ALLOCA_H -DHAVE_LIBPTHREAD -DHAVE_UNISTD_H)
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -stdlib=libc++ -std=c++0x -O3 -Wall" )
find_package( OpenCV REQUIRED )
add_executable( histogram src/histogram.cpp)
add_executable( histMatch src/hist_match.cpp)
target_link_libraries( histogram ${OpenCV_LIBS} m)
target_link_libraries( histMatch ${OpenCV_LIBS} m)
